refactor DepartmentController and DepartmentService on task